--- a/style.css
+++ b/style.css
@@ -1,50 +1,61 @@
 
-
-/*Responsive mobile version styling*/
-
-#main{
-	font-family: "arial", verdana, sans-serif;
-	text-align: justify;
-	padding: 10px;
-	margin:10%;
+main{
+	font-family: "Verdana", Arial, Sans-senif;
+	margin: 5% 5%;
+	border: ridge;
+	padding: 0 5%;
 }
 
-#image{
+
+h1{
+	text-align: center;
+
+}
+
+h2{
+	text-align: center;
+}
+
+img{
+	max-width: 100%;
 	height:auto;
-	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	border-style:ridge;
+	padding: 2%;
+}
+
+#img-div{
+	text-align: center;
+	font-size: 14px;
+	font-style: italic;
+	padding: 2% 0;}
+
+#box-div{
+	display: flex;
+	flex-direction: column;
+}
+
+#tribute-info{
+	width: 100%;
+	height: 50%;
+
+}
+
+#video-info{
+	/*width: 50%;
+	height: 50%;*/
 	margin-left: auto;
 	margin-right: auto;
 }
-#caption{
-	font-size: 14px;
-	text-align: center;
-	font-style: italic;
-	font-size: 12
-}
-h1{
-	font-size: 20;
-	text-align: center;
-}
+
 p{
-	font-size: 14px;
-	
+	text-align: justify;
+	font-size: 16px;
 }
 
-/*Responsive Desktop version styling*/
-/*-----------------------------------*/
-@media only screen (min-width: 600px){
-
-h1{
-	font-size: 24
-}
-#caption{
-	
-	font-size: 11;
-	
-}
-p{
-	font-size: 12px;
-	padding-right: 25%;
-	padding-left: 25%;
-}
+footer{
+	text-align: center;
+	font-size: 11px;
 }
