--- a/style.css
+++ b/style.css
@@ -4,11 +4,19 @@ main{
 	margin: 5% 5%;
 	border: ridge;
 	padding: 0 5%;
+
+}
+body{
+	background-image: url("frida-background.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: center;
 }
 
 
 h1{
 	text-align: center;
+	
 
 }
 
@@ -35,20 +43,17 @@ img{
 #box-div{
 	display: flex;
 	flex-direction: column;
+
 }
 
 #tribute-info{
 	width: 100%;
 	height: 50%;
+	
 
 }
+ 
 
-#video-info{
-	/*width: 50%;
-	height: 50%;*/
-	margin-left: auto;
-	margin-right: auto;
-}
 
 p{
 	text-align: justify;
