--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 
 main{
-	font-family: "Verdana", Arial, Sans-senif;
+	font-family: "Helvetica",Arial, sans-serif;
 	margin: 5% 5%;
-	border: ridge;
+	border-width: 5px;
 	padding: 0 5%;
+	border-style: groove;
 
 }
+
 body{
-	background-image: url("frida-background.jpg");
-	background-repeat: no-repeat;
-	background-size: 100%;
-	background-position: center;
+	background-color: #ccccb3;
 }
 
 
 h1{
 	text-align: center;
+	font-weight: bold;
 	
 
 }
@@ -31,19 +31,18 @@ img{
 	margin-right: auto;
 	display: flex;
 	border-style:ridge;
-	padding: 2%;
-}
+	padding: 0%;
+	border-width: 25px;}
 
 #img-div{
 	text-align: center;
-	font-size: 14px;
+	font-size: 90%;
 	font-style: italic;
-	padding: 2% 0;}
+	padding: 1% 0;}
 
 #box-div{
 	display: flex;
 	flex-direction: column;
-
 }
 
 #tribute-info{
@@ -57,10 +56,10 @@ img{
 
 p{
 	text-align: justify;
-	font-size: 16px;
+	font-size: 100%;
 }
 
 footer{
 	text-align: center;
-	font-size: 11px;
+	font-size: 90%;
 }
