--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2{
 	text-align: center;
 }
 
-img{
+#image{
 	max-width: 100%;
 	height:auto;
 	margin-left: auto;
@@ -47,6 +47,7 @@ img{
 	width: 100%;
 	height: 50%;
 }
+
  
  #video-div{
  	margin-left: auto;
