--- a/style.css
+++ b/style.css
@@ -1,24 +1,10 @@
 
-@media only screen and (max-width: 600px){
-
-	#video-div{
-		width: 300;
-		height: 400;
-		margin-left: auto;
- 		margin-right: auto;
-
-	}
-
-}
-
-
-
 main{
 	font-family: "Helvetica",Arial, sans-serif;
 	margin: 5% 5%;
 	border-width: 5px;
 	padding: 0 5%;
-	border-style: groove;
+	border-style: double;
 
 }
 
@@ -64,9 +50,19 @@ h2{
 
  
  #video-div{
+ 	height:auto;
+ 	width: 100%;
+
+ 
+ }
+
+ iframe{
+ 	display: block;
+ 	width: 100%;
+ 	max-width: 560px;
  	margin-left: auto;
  	margin-right: auto;
- 
+
  }
 
 
@@ -84,9 +80,9 @@ p{
 }
 
 #tribute-link{
-	font-size: 90%;
+	font-size: 70%;
 }
 footer{
 	text-align: center;
-	font-size: 80%;
+	font-size: 60%;
 }
